completed variable environment

--- a/08,HowJSWorkdBehindTheScene/02.JSRuntime&Engine.md
+++ b/08,HowJSWorkdBehindTheScene/02.JSRuntime&Engine.md
@@ -33,8 +33,7 @@ Computer program needs to be converted into 0's and 1's, which is achieved by co
    3. Execution:
       The machine code is executed right away. Execution happens in JS Engine Call stack
 
-- JS Engine Optimization Strategy: It creates an unoptimized code so that the code is executed as soon as possible, then this machine code is being
-  optimized by compiler again which replaces the previous unoptimized code, without ever stopping execution.
+- JS Engine Optimization Strategy: It creates an unoptimized code so that the code is executed as soon as possible, then this machine code is being optimized by compiler again which replaces the previous unoptimized code, without ever stopping execution.
 - This whole process is executed in a special thread separate from the main thread.
 
 # JS Runtime
