completed diffrence b/w regular and arrow function

--- a/08.HowJSWorksBTS/01.HighLevelOverviewOfJS.md
+++ b/08.HowJSWorksBTS/01.HighLevelOverviewOfJS.md
@@ -1,3 +1,5 @@
+# High Level Overview of JavaScript
+
 1. High level
    Any computer program needs computer resources like CPU, hardware etc. In low level language like C you have to manually manage these resources. But in high level language like JavaScript you do not have to worry about it, as it is controlled by abstraction.
 2. Garbage Collector
