completed lecture of primitive and reference type

--- a/08.HowJSWorksBTS/02.JSRuntime&Engine.md
+++ b/08.HowJSWorksBTS/02.JSRuntime&Engine.md
@@ -7,7 +7,7 @@ The JS Engine is a program that executes the JS code. The JS Engine comprises of
 1. Call Stack:
    The place where code is actually executed, using execution context.
 2. Heap:
-   The heap is unstructured memory pool, which stores all the objects which are application needs.
+   The heap is unstructured memory pool, which stores all the objects which our application needs.
 
 # Compilation and Interpretation
 
