--- a/08.HowJSWorksBTS/01.HighLevelOverviewOfJS.md
+++ b/08.HowJSWorksBTS/01.HighLevelOverviewOfJS.md
@@ -12,7 +12,7 @@
    _ Object Oriented Paradigm: \* Functional Paradigm:
    Paradigm could be imperative and declarative. JS has all the paradigms.
 5. Prototype based object oriented
-   Almost everything in JS are objects, except for non-primitive data types. We create an array from array blueprint which is called prototype. This prototype contains all the
+   Almost everything in JS are objects, except for non-primitive data types. We create an array from array blueprint which is called prototype. This prototype contains all the methods.
 6. First class functions
    Functions are treated as variables. We can pass them to functions and return from functions.
 7. Dynamic
