practicing array methods

--- a/08.HowJSWorksBTS/03.ExecutionContext&CallStack.md
+++ b/08.HowJSWorksBTS/03.ExecutionContext&CallStack.md
@@ -25,7 +25,7 @@ return c;
 
 5. Then the execution of top level code is done inside the global context
 
-6. After the execution of top level code, the execution of functions and methods happens as they are also functions attacked to objects.
+6. After the execution of top level code, the execution of functions and methods happens as they are also functions attached to objects.
 
 7. After all the functions are executed the engine will wait for the callbacks to arrive and will execute them. For example, a callback function attached with a handle click, the event loop provide the callback functions to the execution context.
 
