--- a/08.HowJSWorksBTS/06.VariableEnvironment.md
+++ b/08.HowJSWorksBTS/06.VariableEnvironment.md
@@ -42,12 +42,12 @@ Execution context consist of
 <code>
 const myName = 'Jonas';
 
-if(myName === 'Jonas'){
-console.log(`${myName} is a ${job}`);
-const age = 2037- 1989;
-console.log(age);
-const job = 'teacher';
-console.log(x)
+if(myName === 'Jonas'){</br>
+console.log(`${myName} is a ${job}`);</br>
+const age = 2037- 1989;</br>
+console.log(age);</br>
+const job = 'teacher';</br>
+console.log(x)</br>
 }
 </code>
 
